# rocket-auth

./: .env  Cargo.toml  Rocket.toml  diesel.toml  readme.md
migrations/2024-07-14-173432_create_users/: up.sql
src/: main.rs  schema.rs
src/database/: database.rs
src/handler/: google_oauth.rs  handler.rs  mod.rs  otp.rs
src/jwt/: jwt.rs
src/models/: models.rs
