[package]
name = "rocket-signup"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_contrib = "0.4.11"
rocket_cors = "0.6.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rocket_sync_db_pools = { version = "0.1", features = ["diesel_postgres_pool"] }
