[package]
name = "rocket-signup"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
rocket_sync_db_pools = { version = "0.1", features = ["diesel_postgres_pool"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["serde"] }
totp-rs = { version = "5.5.0", features = ["gen_secret"]}
reqwest = { version = "0.11", features = ["json"] }
base32 = "0.4"